--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 </p >
 
 <p>
-所谓诚其意者，毋（wú）自欺也。如恶（wù）恶（è）臭（xiù），如好（hào）好（hǎo）色，此之谓自谦（qiè慊）。故君子必慎其独也。小人闲居为（wéi）不善，无所不至；见君子而后厌（yǎn）然，掩其不善，而著（zhù）其善。人之视己，如见其肺肝然，则何益矣？此谓诚于中，形于外。故君子必慎其独也。曾子曰：“十目所视，十手所指，其严乎！”富润屋，德润身，心广体胖（pán）。故君子必诚其意。
+所谓诚其意者，毋（wú）自欺也。如恶（wù）恶（è）臭（xiù），如好（hào）好（hǎo）色，此之谓自谦（qiè慊）。故君子必慎其独也。小人闲居为（wéi）不善，无所不至；见君子而后厌（yàn）然，掩其不善，而著（zhù）其善。人之视己，如见其肺肝然，则何益矣？此谓诚于中，形于外。故君子必慎其独也。曾子曰：“十目所视，十手所指，其严乎！”富润屋，德润身，心广体胖（pán）。故君子必诚其意。
 </p >
 
 <p>
@@ -540,6 +540,7 @@
 </body>
 
 </html>
+
 
 
 
