--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
             
             .prayer-content {
                 font-size: 16px;
+				font-weight: 700;
                 padding: 8px 4px;
             }
             
@@ -540,6 +541,7 @@
 </body>
 
 </html>
+
 
 
 
