--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             
             .prayer-content {
                 font-size: 17px;
-				font-weight: bold;
+				//font-weight: bold;
 				font-family: '微软雅黑', serif;
                 padding: 8px 4px;
             }
@@ -368,7 +368,7 @@
          
 
 <p>
-大学之道.。，在明明德，在亲（qīn）民，在止于至善。知止而后有定，定而后能静，静而后能安，安而后能虑，虑而后能得。物有本末，事有终始，知所先后，则近道矣。
+大学之道，在明明德，在亲（qīn）民，在止于至善。知止而后有定，定而后能静，静而后能安，安而后能虑，虑而后能得。物有本末，事有终始，知所先后，则近道矣。
 </p >
 
  <p>
@@ -542,6 +542,7 @@
 </body>
 
 </html>
+
 
 
 
